--- a/package.json
+++ b/package.json
@@ -9,6 +9,21 @@
   "author": "yaoleksa",
   "license": "ISC",
   "devDependencies": {
-    "bcrypt": "^5.1.1"
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@supabase/supabase-js": "^2.45.2",
+    "babel-loader": "^9.1.3",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "url": "^0.11.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
