--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@babel/preset-react": "^7.24.7",
     "@supabase/supabase-js": "^2.45.2",
     "babel-loader": "^9.1.3",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
