--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "babel-loader": "^9.1.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "fs": "^0.0.1-security",
+    "node-polyfill-webpack-plugin": "^4.0.0",
     "path": "^0.12.7",
+    "process": "^0.11.10",
     "url": "^0.11.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
