--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "author": "yaoleksa",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@supabase/supabase-js": "^2.45.2",
+    "babel": "^6.23.0",
     "babel-loader": "^9.1.3",
     "bcryptjs": "^2.4.3",
     "fs": "^0.0.1-security",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "path": "^0.12.7",
     "process": "^0.11.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "url": "^0.11.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
